--- a/myapp/app/src/main/res/layout/activity_main.xml
+++ b/myapp/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,11 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="sample.com.myappsearch.MainActivityFragment" tools:layout="@layout/fragment_main"
-    android:layout_width="match_parent" android:layout_height="match_parent" />
+
+<LinearLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/main_fragment_container"
+android:layout_width="match_parent"
+android:clickable="true"
+android:layout_height="match_parent"
+android:orientation="vertical">
+
+</LinearLayout>
