--- a/myapp/app/src/main/res/layout/fragment_main.xml
+++ b/myapp/app/src/main/res/layout/fragment_main.xml
@@ -10,15 +10,23 @@
     tools:context=".MainActivityFragment">
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"></LinearLayout>
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <EditText
         android:id="@+id/search_field"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_margin="20dp"
         android:layout_height="wrap_content"
         android:hint="product name"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_search"
+        android:text="Search"/>
+</LinearLayout>
 
     <GridView
+        android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/product_cross_sell_header_layout"
