--- a/myapp/app/src/main/res/layout/product_item_view.xml
+++ b/myapp/app/src/main/res/layout/product_item_view.xml
@@ -16,7 +16,7 @@
 
         <ImageView
             android:id="@+id/item_image"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:layout_centerInParent="true"
             android:layout_margin="5dp"
